# FWR-Cam

./: .gitignore  AUTHORS  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  NOTICE  README.md  VERSION
.github/workflows/: auto_release_on_vTag.yml
cmake/: FWR-Cam_lnx.pc.in  FWR_Cam_lnxConfig.cmake.in
include/FWR-Cam_lnx/: V4L2Cam.hpp  Version.hpp.in
include/FWR-Cam_lnx/Models/: See3CAM_24CUG.hpp
include/FWR-Cam_lnx/util/: SmallBitset.hpp
source/FWR-Cam_lnx/: V4L2Cam.cpp
source/FWR-Cam_lnx/Models/: See3CAM_24CUG.cpp
